--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web_ass34",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
