--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -15,7 +15,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "author": "",
   "license": "ISC"
 }
